<resources>
  <string name="email_developer">pinkyhijabdeveloper@gmail.com</string>
  <string name="app_name">PinkFame</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="text_email">Gmail</string>
  <string name="text_email_register">Gmail (You just can use Gmail)</string>
  <string name="text_username">Username</string>
  <string name="text_password">Password</string>
  <string name="text_login">Login</string>
  <string name="text_register">Register</string>
  <string name="text_succes">Succes</string>
  <string name="text_error">Error</string>
  <string name="text_wrong_login">Wrong Email or Password</string>
  <string name="text_name_with_dot">Name :</string>
  <string name="text_email_with_dot">Gmail :</string>
  <string name="text_logout">Logout</string>
  <string name="text_home">Home</string>
  <string name="text_video">Video</string>
  <string name="text_ebook">E-Book</string>
  <string name="text_other">Other</string>
  <string name="text_category">Category</string>
  <string name="text_search">Search</string>
  <string name="text_error_player">Cant play this video</string>
  <string name="text_account">Account</string>
  <string name="text_send">Send</string>
  <string name="text_related">Related</string>
  <string name="ads_footer">ca-app-pub-6242493810500826/4487972485</string>
  <string name="text_send_article">Send Article</string>
  <string name="text_rate">Rate This App</string>
  <string name="text_sponsor">Sponsored By</string>
  <string name="text_pinky_hijab_news">Pink Muslimah News</string>
  <string name="text_pinky_hijab_news_detail">The news portal contains information and
    inspiration for Muslimah.</string>
  <string name="text_pinky_hijab_voting">Pink Muslimah Vote</string>
  <string name="text_pinky_hijab_voting_detail">Vote and share event selection of
    participans pinky hijab ambassador</string>
  <string name="text_pinky_hijab_community">Pink Muslimah Community</string>
  <string name="text_pinky_hijab_community_detail">History of Pinky Hijab Community from beginning</string>
  <string name="text_pinky_hijab_video">Pink Muslimah TV</string>
  <string name="text_pinky_hijab_video_detail">Find tutorial videos, tausiyah, fashion,
    lifestyle, traveling, and more.</string>
  <string name="text_pinky_hijab_ebook">Pink Muslimah E-book</string>
  <string name="text_pinky_hijab_ebook_detail">Get free e-books about fashion, novel,
    biography, fiction, and non-fiction.</string>
  <string name="text_pinky_hijab_event">Pink Muslimah Event</string>
  <string name="text_pinky_hijab_event_detail">Find interesting event information that you
    can follow to increase knowledge, inspiration, and motivation.</string>
  <string name="text_other_kritik_saran">Feedback</string>
  <string name="text_other_kirim_artikel">Send Your Article</string>
  <string name="text_other_share">Share This App</string>
  <string name="text_other_about">About</string>
  <string name="text_other_contact_us">Contact Us</string>
  <string name="text_instruction_type">Type in here</string>
  <string name="text_instruction_type_feedback">Your feedback here...</string>
  <string name="text_next">Next</string>
  <string name="text_send_verification_code">Send Verification Code</string>
  <string name="text_skip">Skip</string>
  <string name="caption_error_internet_acces">No Internet Acces</string>
  <string name="text_share_app_subject">Share This App To Your Friends</string>
  <string name="text_share_app_text">Get the last update women news from Pinky Hijab</string>
  <string name="text_kritik_saran_instruction">Kami sangat membutuhkan kritik &amp; saran dari pengguna semua, supaya kami dapat mengembangkan aplikasi yang lebih baik dan disukai oleh pengguna semua. Terima Kasih</string>
  <string name="title_activity_ebook">EbookActivity</string>
  <string name="no_internet_acces">Sorry… You dont have internet connection \nPlease check your
    internet connection \n Tap your screen to refresh this app</string>
  <string name="verify_code_instruction">Get your verification code from %1$s and type here</string>
  <string name="caption_log_out">Log Out</string>
  <string name="caption_change_password">Change Password</string>
  <string name="caption_verification_code">Verification Code</string>
  <string name="caption_back_to_login">Back to Login</string>
  <string name="title_activity_detail_ebook_scrolling">DetailEbookScrollingActivity</string>
  <string name="large_text">
    "Material is the metaphor.\n\n"

    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"
    "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
    "flexibility of the material creates new affordances that supercede those in the physical "
    "world, without breaking the rules of physics.\n"
    "The fundamentals of light, surface, and movement are key to conveying how objects move, "
    "interact, and exist in space and in relation to each other. Realistic lighting shows "
    "seams, divides space, and indicates moving parts.\n\n"

    "Bold, graphic, intentional.\n\n"

    "The foundational elements of print based design typography, grids, space, scale, color, "
    "and use of imagery guide visual treatments. These elements do far more than please the "
    "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
    "imagery, large scale typography, and intentional white space create a bold and graphic "
    "interface that immerse the user in the experience.\n"
    "An emphasis on user actions makes core functionality immediately apparent and provides "
    "waypoints for the user.\n\n"

    "Motion provides meaning.\n\n"

    "Motion respects and reinforces the user as the prime mover. Primary user actions are "
    "inflection points that initiate motion, transforming the whole design.\n"
    "All action takes place in a single environment. Objects are presented to the user without "
    "breaking the continuity of experience even as they transform and reorganize.\n"
    "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
    "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

    "3D world.\n\n"

    "The material environment is a 3D space, which means all objects have x, y, and z "
    "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
    "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
    "position along the z-axis and has a standard 1dp thickness.\n"
    "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
    "emulated by manipulating the y-axis.\n\n"

    "Light and shadow.\n\n"

    "Within the material environment, virtual lights illuminate the scene. Key lights create "
    "directional shadows, while ambient light creates soft shadows from all angles.\n"
    "Shadows in the material environment are cast by these two light sources. In Android "
    "development, shadows occur when light sources are blocked by sheets of material at "
    "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
    "y-axis only. The following example shows the card with a height of 6dp.\n\n"

    "Resting elevation.\n\n"

    "All material objects, regardless of size, have a resting elevation, or default elevation "
    "that does not change. If an object changes elevation, it should return to its resting "
    "elevation as soon as possible.\n\n"

    "Component elevations.\n\n"

    "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
    "does not vary from 6dp in one app to 16dp in another app).\n"
    "Components may have different resting elevations across platforms, depending on the depth "
    "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

    "Responsive elevation and dynamic elevation offsets.\n\n"

    "Some component types have responsive elevation, meaning they change elevation in response "
    "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
    "changes are consistently implemented using dynamic elevation offsets.\n"
    "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
    "to the component’s resting state. They ensure that elevation changes are consistent "
    "across actions and component types. For example, all components that lift on press have "
    "the same elevation change relative to their resting elevation.\n"
    "Once the input event is completed or cancelled, the component will return to its resting "
    "elevation.\n\n"

    "Avoiding elevation interference.\n\n"

    "Components with responsive elevations may encounter other components as they move between "
    "their resting elevations and dynamic elevation offsets. Because material cannot pass "
    "through other material, components avoid interfering with one another any number of ways, "
    "whether on a per component basis or using the entire app layout.\n"
    "On a component level, components can move or be removed before they cause interference. "
    "For example, a floating action button (FAB) can disappear or move off screen before a "
    "user picks up a card, or it can move if a snackbar appears.\n"
    "On the layout level, design your app layout to minimize opportunities for interference. "
    "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
    "when a user tries to pick up one of cards.\n\n"
  </string>
  <string name="action_settings">Settings</string>
  <string name="caption_current_password">Current Password</string>
  <string name="caption_new_password">New Password</string>
  <string name="caption_confirm_password">Confirm Password</string>
  <string name="caption_read">Read</string>
  <string name="caption_about_ebook">PINK FAME bekerjasama dengan berbagai penerbit buku, menyediakan buku dan  majalah digital, E book yang tersedia di Pink Fame dapat di download dan dibaca dengan gratis. \nAyo wujudkan impian kamu menjadi penulis buku dan jangan lupa kirim tulisan kamu ke redaksi PINK FAME, jangan hanya disimpan di laptop saja</string>
  <string name="caption_about_event">Menampilkan informasi dari berbagai acara- acara menarik berdasarkan minat, waktu luang yang kamu miliki, lokasi kamu berada saat ini. \nInformasikan acara kamu di PINK FAME ya…</string>
  <string name="caption_about_vote">Sarana voting untuk berbagai pemilihan,\nInformasikan kepada redaksi PINK FAME jika kamu mengadakan Pemilihan…</string>
  <string name="caption_about_tv">Temukan video-video menarik dan inspiratif seputar fashion,
    beauty, lifestyle,review produk, travelling, dan profil wanita inspiratif. \nJangan lupa kirim juga video menarik yang kamu punya dan infokan ke redaksi PINK FAME jika ingin diliput…</string>
  <string name="caption_about_news">Kamu dapat menemukan berbagai informasi terbaru mengenai
    berita seputar kecantikan, fashion, lifestyle, review produk, travelling, dan kisah-kisah inspirasi para wanita dengan berbagai prestasi, dan info menarik lainnya. \nKamu juga dapat mengirimkan tulisan kamu ke redaksi PINK FAME dan dapatkan hadiah menarik jika tulisan kamu dimuat.</string>
  <string name="caption_send_article">Send your Article, be famous.</string>
  <string name="caption_choose_file">Choose File</string>
  <string name="caption_text_kritik_sara">Help us improove with feedback</string>
</resources>