<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@null"
  tools:context="com.faishalbadri.hijab.ui.login_register.LoginFragment">

  <TextView
    android:id="@+id/textview_app_name_fragment_login"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_widget"
    android:fontFamily="cursive"
    android:gravity="center"
    android:text="@string/app_name"
    android:textColor="@color/color_white_ff"
    android:textSize="@dimen/app_name_text_size"
    app:layout_constraintBottom_toTopOf="@+id/materialedittext_email_fragment_login"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent" />


  <com.rengwuxian.materialedittext.MaterialEditText
    android:id="@+id/materialedittext_email_fragment_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_widget"
    android:padding="@dimen/padding_widget"
    android:hint="@string/text_email"
    android:inputType="textEmailAddress"
    android:maxLines="1"
    android:textCursorDrawable="@null"
    app:layout_constraintBottom_toTopOf="@+id/materialedittext_password_fragment_login"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:met_baseColor="@color/color_white_ff"
    app:met_errorColor="@android:color/holo_red_dark"
    app:met_floatingLabel="highlight"
    app:met_primaryColor="@color/color_white_ff"
    app:met_textColorHint="@color/color_white_ff"
    app:met_underlineColor="@color/color_white_ff"
    />

  <com.rengwuxian.materialedittext.MaterialEditText
    android:id="@+id/materialedittext_password_fragment_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_widget"
    android:padding="@dimen/padding_widget"
    android:hint="@string/text_password"
    android:inputType="textPassword"
    android:maxLines="1"
    android:textCursorDrawable="@null"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:met_baseColor="@color/color_white_ff"
    app:met_errorColor="@android:color/holo_red_dark"
    app:met_floatingLabel="highlight"
    app:met_primaryColor="@color/color_white_ff"
    app:met_textColorHint="@color/color_white_ff"
    app:met_underlineColor="@color/color_white_ff" />

  <Button
    android:id="@+id/button_login_fragment_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_widget"
    android:padding="@dimen/padding_widget"
    android:background="@drawable/background_custom_border_layout_white"
    android:text="@string/text_login"
    android:textColor="@color/color_white_ff"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/materialedittext_password_fragment_login" />

</android.support.constraint.ConstraintLayout>
