<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/background_main_transparent"
  tools:context="com.faishalbadri.hijab.ui.change.password.ChangePasswordFragment">


  <ImageView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:padding="30dp"
    android:src="@drawable/ic_password_shield"
    app:layout_constraintBottom_toTopOf="@+id/guideline_change_password_center"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <android.support.constraint.Guideline
    android:id="@+id/guideline_change_password_center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.4"/>

  <android.support.v7.widget.CardView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline_change_password_bottom"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/guideline_change_password_center">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="10dp">

      <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/materialedittext_current_password"
        android:layout_width="@dimen/match_parent_size"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:hint="@string/caption_current_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@+id/materialedittext_new_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_baseColor="@color/colorPrimary"
        app:met_errorColor="@android:color/holo_red_dark"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_textColorHint="@color/colorPrimary"
        app:met_underlineColor="@color/colorPrimary"/>

      <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/materialedittext_new_password"
        android:layout_width="@dimen/match_parent_size"
        android:layout_height="@dimen/match_parent_size"
        android:layout_margin="6dp"
        android:hint="@string/caption_new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@+id/materialedittext_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialedittext_current_password"
        app:met_baseColor="@color/colorPrimary"
        app:met_errorColor="@android:color/holo_red_dark"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_textColorHint="@color/colorPrimary"
        app:met_underlineColor="@color/colorPrimary"/>

      <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/materialedittext_confirm_password"
        android:layout_width="@dimen/match_parent_size"
        android:layout_height="@dimen/match_parent_size"
        android:layout_margin="6dp"
        android:hint="@string/caption_confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialedittext_new_password"
        app:met_baseColor="@color/colorPrimary"
        app:met_errorColor="@android:color/holo_red_dark"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_textColorHint="@color/colorPrimary"
        app:met_underlineColor="@color/colorPrimary"/>


    </android.support.constraint.ConstraintLayout>

  </android.support.v7.widget.CardView>

  <android.support.constraint.Guideline
    android:id="@+id/guideline_change_password_bottom"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.85"/>

  <Button
    android:id="@+id/button_change_password"
    style="?attr/borderlessButtonStyle"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="16dp"
    android:background="@drawable/button_ripple_full_primary_color"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:text="@string/caption_change_password"
    android:textAllCaps="false"
    android:textColor="@color/color_white_ff"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/guideline_change_password_bottom"/>

</android.support.constraint.ConstraintLayout>
