<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.faishalbadri.hijab.ui.kritik_saran.KritikSaranActivity">

  <include
    android:id="@+id/toolbar_activity_kritik_saran"
    layout="@layout/general_toolbar_with_back_button"/>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/layout_kritik_saran"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_activity_kritik_saran">

    <ImageView
      android:id="@+id/imageview_kritik_saran"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:src="@drawable/ic_feedback"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

    <TextView
      android:id="@+id/textview_feedback"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/fab_margin"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:gravity="center"
      android:text="@string/caption_text_kritik_sara"
      android:textColor="@color/colorPrimary"
      android:textSize="20sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageview_kritik_saran"/>

    <LinearLayout
      android:id="@+id/view_feedback"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="30dp"
      android:layout_marginBottom="@dimen/fab_margin"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:background="@drawable/background_custom_border_white_with_primarycolor_bold"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/button_send_feedback"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textview_feedback">

      <EditText
        android:id="@+id/edittext_kritik_saran"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_widget"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/text_instruction_type_feedback"
        />

    </LinearLayout>

    <Button
      android:id="@+id/button_send_feedback"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/fab_margin"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:background="@drawable/button_ripple_full_primary_color"
      android:text="@string/text_send"
      android:textAllCaps="false"
      android:textColor="@color/color_white_ff"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"/>

  </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/layout_succes"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_activity_kritik_saran">

    <ImageView
      android:id="@+id/image_succes"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="90dp"
      android:src="@drawable/ic_check_circle"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="3:2"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:gravity="center"
      android:text="@string/caption_succes_kritik_saran"
      android:textColor="@color/colorPrimary"
      android:textSize="16sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/image_succes"/>

  </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
